--- a/HallsAndLabsScheduleGenerator/appsettings.json
+++ b/HallsAndLabsScheduleGenerator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HallsAndLabsScheduleGenerator-CA699193-723E-46D4-BB5B-0B9541DBFBCE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-1MMDC38;Database=SGDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
